--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,39 +1,71 @@
 *, *:after, *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html, input, textarea {
-	font: 100%/1.5em Helvetica, Arial, sans-serif;
+    font: 100%/1.5em Helvetica, Arial, sans-serif;
 }
 
 form {
-	margin: 5% auto 0;
-	text-align: center;
-	width: 50%;
+    margin: 5% auto 0;
+    text-align: center;
+    width: 50%;
 }
-	form input {
-		background: rgb(236, 240, 241);
-		border-radius: 3px;
-		padding: 1em;
-	}
+/*form input {
+    background: rgb(236, 240, 241);
+    border-radius: 3px;
+    padding: 1em;
+}*/
 
 table {
-	background: rgb(245, 245, 245);
-	border-collapse: collapse;
-	margin: 5% auto;
-	text-align: center;
-	width: 90%;
+    background: rgb(245, 245, 245);
+    border-collapse: collapse;
+    margin: 5% auto;
+    text-align: center;
+    width: 90%;
 }
-	table thead {
-		background: rgb(235, 235, 235);
-	}
-		table tbody tr:nth-child(even) {
-			background: rgb(250, 250, 250);
-		}
-		table thead th, table tbody tr td {
-			padding: 0.5em 1em;
-		}
+table thead {
+    background: rgb(235, 235, 235);
+}
+table tbody tr:nth-child(even) {
+    background: rgb(250, 250, 250);
+}
+table thead th, table tbody tr td {
+    padding: 0.5em 1em;
+}
+.preview p {
+    text-align: center;
+    padding: 1em;
+}
+.preview img {
+    width: 8em;
+    /* text-align: center; */
+}
+
+li {
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    border: 1px solid red;
+}
+
+ul {
+    border: 1px solid;
+}
+input[type=file] {
+    display: none;
+}
+label img {
+    max-height: 1.5em;
+    /* display: inline-block; */
+}
+
+label {
+    border: 1px solid;
+    display: inline-block;
+    padding: 0.3em;
+}
